--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
             transition: color 0.2s;
         }
 
-        #product-detail-page .close-btn-page:hover {
+        .product-detail-page .close-btn-page:hover {
             color: var(--accent-green);
         }
 
